--- a/slides/week2.html
+++ b/slides/week2.html
@@ -8,6 +8,7 @@ permalink: PythonForHumanities/slides/week2
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/reveal.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/css/theme/night.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/tomorrow-night-bright.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/michaelhue/keyscss/76bb603e/keys.css">
     <style>
     img {
@@ -32,9 +33,11 @@ permalink: PythonForHumanities/slides/week2
           </textarea>
         </section>
         <section>
-          <section data-markdown>
+          <section data-markdown data-menu-title="安裝Python(Windows)">
             <textarea data-template>
-              ## 安裝 Python
+              ## <i class="fab fa-windows"></i> 安裝 Python 
+
+              For Windows
             </textarea>
           </section>
           <section data-markdown>
@@ -59,9 +62,78 @@ permalink: PythonForHumanities/slides/week2
         </section>
 
         <section>
+          <section data-markdown data-menu-title="安裝Python(Mac)">
+            <textarea data-template>
+              ## <i class="fab fa-apple"></i> 安裝 Python 
+
+              For Mac
+            </textarea>
+          </section>
           <section data-markdown>
             <textarea data-template>
-              ## 環境建置
+              ### 歡迎畫面
+              ![](./assets/img/week2/p13-1.png)
+
+              （一直下一步就對了）
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 介紹頁面
+              ![](./assets/img/week2/p13-2.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 版權宣告
+              ![](./assets/img/week2/p13-3.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 選擇安裝硬碟
+
+              預設即可
+
+              ![](./assets/img/week2/p13-4.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 選擇安裝路徑
+
+              預設即可
+
+              ![](./assets/img/week2/p13-5.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 輸入密碼 
+              ![](./assets/img/week2/p13-6.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 然後就安裝成功了
+
+              跟 Windows 不太一樣的點是，  
+              這裡沒有什麼要勾選的，  
+
+              系統變數也不用特別去設定，  
+              裝完就可以直接在終端機運行了。  
+
+              （這邊聽不懂也沒有關係，暫時沒有那麼重要...）
+            </textarea>
+          </section>
+        </section>
+
+        <section>
+          <section data-markdown>
+            <textarea data-template data-menu-title="環境建置(Windows)">
+              ## <i class="fab fa-windows"></i> 環境建置
+
+              For Windows
             </textarea>
           </section>
           <section data-markdown>
@@ -91,11 +163,60 @@ permalink: PythonForHumanities/slides/week2
             <textarea data-template>
               ### 安裝 IPython   
               ```bash
-              pip install python
+              pip install ipython
               ```
               ![install ipython](./assets/img/week2/p6.png)
             </textarea>
           </section>
+        </section>
+
+        <section>
+          <section data-markdown>
+            <textarea data-template data-menu-title="環境建置(Mac)">
+              ## <i class="fab fa-apple"></i> 環境建置
+
+              For Mac
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 打開終端機
+              按下 
+              <span class="light-keys">
+                <kbd>⌘</kbd> + <kbd>Space</kbd>
+              </span>
+              或
+              <span class="light-keys">
+                <kbd>CTRL</kbd> + <kbd>Space</kbd>
+              </span>
+              打開 **Spotlight** 
+
+              輸入 `terminal`
+              
+              ![execute](./assets/img/week2/p14-1.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 確認是否正確安裝
+              查看 Python 與 pip 版本
+              ```bash
+              python --version
+              pip --version
+              ```
+              ![check version](./assets/img/week2/p14-2.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 安裝 IPython   
+              ```bash
+              pip install ipython
+              ```
+              ![install ipython](./assets/img/week2/p14-3.png)
+            </textarea>
+          </section>
+
         </section>
 
         <section>
