--- a/slides/week2.html
+++ b/slides/week2.html
@@ -11,6 +11,17 @@ permalink: PythonForHumanities/slides/week2
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/michaelhue/keyscss/76bb603e/keys.css">
     <style>
+    .reveal h1,
+    .reveal h2,
+    .reveal h3,
+    .reveal h4,
+    .reveal h5,
+    .reveal h6,
+    .reveal div,
+    .reveal span,
+    .reveal p {
+      font-family: Montserrat, Impact, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "Microsoft JhengHei", "標楷體", DFKai-SB, sans-serif;
+    }
     img {
       width: 60%;
     }
@@ -23,6 +34,7 @@ permalink: PythonForHumanities/slides/week2
           <textarea data-template>
             # Week 2 
             環境建置、編輯器安裝與版本控制介紹
+            <div id="qrcode"></div>
           </textarea>
         </section>
         <section data-background-transition="zoom" data-background="#b5533c" data-markdown>
@@ -397,6 +409,12 @@ permalink: PythonForHumanities/slides/week2
 
               greeting()
               ``` 
+
+              記得要存檔：
+
+              <i class="fab fa-windows"></i> <kbd class="light">Win</kbd> + <kbd class="light">S</kbd>
+
+              <i class="fab fa-apple"></i> <kbd class="light">⌘</kbd> + <kbd class="light">S</kbd>
             </textarea>
           </section>
           <section data-markdown>
@@ -418,6 +436,27 @@ permalink: PythonForHumanities/slides/week2
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/lib/js/head.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.min.js"></script>
+    <script src="https://cdn.rawgit.com/chuckfairy/VanillaQR.js/96c2ccc4/VanillaQR.min.js"></script>
+    <script type="text/javascript">
+    (function(){
+        var tId = setInterval(function() {
+          if (document.readyState == "complete") onComplete()
+        }, 11);
+        function onComplete(){
+          clearInterval(tId);    
+          var qr = new VanillaQR({
+              url: window.location.href,
+              colorLight: "#fff",
+              colorDark: "#000",
+              toTable: false,
+              ecclevel: 1,
+              noBorder: false,
+              borderSize: 0
+          });
+          var d = document.getElementById('qrcode').appendChild(qr.domElement);
+        };
+    })()
+    </script>
     <script>
       Reveal.initialize({
         history: true,
