--- a/slides/week2.html
+++ b/slides/week2.html
@@ -33,7 +33,7 @@ permalink: PythonForHumanities/slides/week2
         <section data-markdown>
           <textarea data-template>
             # Week 2 
-            環境建置、編輯器安裝與版本控制介紹
+            環境建置與編輯器安裝
             <div id="qrcode"></div>
           </textarea>
         </section>
