--- a/slides/week2.html
+++ b/slides/week2.html
@@ -233,11 +233,12 @@ permalink: PythonForHumanities/slides/week2
 
         <section>
           <section data-markdown>
-            <textarea data-template>
-              ## 安裝編輯器
+            <textarea data-template data-menu-title="安裝編輯器(Windows)">
+              ## <i class="fab fa-windows"></i> 安裝編輯器
+              以 Visual Studio Code 為例
             </textarea> 
           </section>
-          <section data-markdown>
+          <section data-markdown data-menu-title="下載編輯器(Windows)">
             <textarea data-template>
               ### 下載編輯器
               下載 [Visual Studio Code (VSCode)](https://code.visualstudio.com)
@@ -302,8 +303,42 @@ permalink: PythonForHumanities/slides/week2
 
         <section>
           <section data-markdown>
+            <textarea data-template data-menu-title="安裝編輯器(Mac)">
+              ## <i class="fab fa-apple"></i> 安裝編輯器
+              以 Visual Studio Code 為例
+            </textarea> 
+          </section>
+          <section data-markdown data-menu-title="下載編輯器(Mac)">
+            <textarea data-template>
+              ### 下載編輯器
+              下載 [Visual Studio Code (VSCode)](https://code.visualstudio.com)
+
+              ![](./assets/img/week2/p2-1.png)
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 解壓縮
+              如果你的檔案名稱是 `.zip` 結尾的話，  
+              請**點兩下**解壓縮
+
+              如果你是用 <i class="fab fa-safari"></i>Safari瀏覽器下載的話，  
+              它可能下載完會自動解壓縮
+            </textarea>
+          </section>
+          <section data-markdown>
+            <textarea data-template>
+              ### 安裝
+              ![](./assets/img/week2/p2-2.png)
+            </textarea>
+          </section>
+        </section>
+
+        <section>
+          <section data-markdown>
             <textarea data-template>
               ## 設定編輯器 
+              <i class="fab fa-windows"></i> <i class="fab fa-apple"></i> 通用
             </textarea>
           </section>
           <section data-markdown>
@@ -361,6 +396,7 @@ permalink: PythonForHumanities/slides/week2
           <section data-markdown>
             <textarea data-template>
               ## 整合開發環境
+              <i class="fab fa-windows"></i> <i class="fab fa-apple"></i> 通用
             </textarea>
           </section>
           <section data-markdown>
