fix typo: windows 存檔should be ctrl + s

--- a/slides/week2.html
+++ b/slides/week2.html
@@ -448,7 +448,7 @@ permalink: PythonForHumanities/slides/week2
 
               記得要存檔：
 
-              <i class="fab fa-windows"></i> <kbd class="light">Win</kbd> + <kbd class="light">S</kbd>
+              <i class="fab fa-windows"></i> <kbd class="light">CTRL</kbd> + <kbd class="light">S</kbd>
 
               <i class="fab fa-apple"></i> <kbd class="light">⌘</kbd> + <kbd class="light">S</kbd>
             </textarea>
