move custom css to slides.css

--- a/slides/week2.html
+++ b/slides/week2.html
@@ -10,22 +10,7 @@ permalink: PythonForHumanities/slides/week2
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/tomorrow-night-bright.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.rawgit.com/michaelhue/keyscss/76bb603e/keys.css">
-    <style>
-    .reveal h1,
-    .reveal h2,
-    .reveal h3,
-    .reveal h4,
-    .reveal h5,
-    .reveal h6,
-    .reveal div,
-    .reveal span,
-    .reveal p {
-      font-family: Montserrat, Impact, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "Microsoft JhengHei", "標楷體", DFKai-SB, sans-serif;
-    }
-    img {
-      width: 60%;
-    }
-    </style>
+    <link rel="stylesheet" href="./assets/css/slides.css">
   </head>
   <body>
     <div class="reveal">
