set title in Front Matter

--- a/slides/week_2.html
+++ b/slides/week_2.html
@@ -1,15 +1,9 @@
 ---
 layout: slide_pfh
 permalink: PythonForHumanities/slides/week2
+title: 環境建置與編輯器安裝
 ---
 
-<section data-markdown>
-  <textarea data-template>
-    # Week 2 
-    環境建置與編輯器安裝
-    <div id="qrcode"></div>
-  </textarea>
-</section>
 <section data-background-transition="zoom" data-background="#b5533c" data-markdown>
   <textarea data-template>
     ## 老司機
