--- a/slides/week_3.html
+++ b/slides/week_3.html
@@ -131,14 +131,14 @@ title: 程式編寫與執行基本概念
     <script type="text/template">
       ### `.py` 轉成 `.pyc`
        
-      `.py` 會先被轉譯成*位元組碼* (bytecode)，就是 `.pyc`
+      `.py` 會先被編譯成*位元組碼* (bytecode)，就是 `.pyc`
     </script>
   </section>
   <section data-markdown>
     <textarea data-template>
-      ### `pyc` 轉成 *bytecode*
+      ### `pyc` 轉成 *機器碼*
 
-      透過 Python Virtual Machine (PVM), `.pyc` 會被轉譯成 *機器碼* (machine code)
+      透過 Python Virtual Machine (PVM), `.pyc` 會被轉換成 *機器碼* (machine code)
     </textarea>
   </section>
   <section data-markdown>
@@ -320,26 +320,12 @@ title: 程式編寫與執行基本概念
   </section>
   <section data-markdown>
     <textarea data-template>
-      ### Library (函式庫)
-
-      Library 為 modules/packages 的集合
-
-      ```no-highlight
-      .
-      └── PythonForHumanities
-          ├── hello.py 
-          └── main.py 
-      ```
-    </textarea>
-  </section>
-  <section data-markdown>
-    <textarea data-template>
       ### Package (套件)
 
       一個包含 `__init__.py` 命名空間(資料夾)
 
       ```no-highlight
-      PythonForHumanities 
+      PythonForHumaniteis 
       └── mypackage
           ├── __init__.py 
           └── hello.py 
@@ -353,9 +339,23 @@ title: 程式編寫與執行基本概念
       ```  
     </textarea>
   </section>
+  <section data-markdown>
+    <textarea data-template>
+      ### Library (函式庫)
+
+      Library 為 modules/packages 的集合
+
+      ```no-highlight
+      .
+      └── PythonForHumanities
+          ├── hello.py 
+          └── main.py 
+      ```
+    </textarea>
+  </section>
   <section data-background-transition="zoom" data-background="#0abab5" data-markdown>
     <textarea data-template>
-      ### Library vs Package
+      ###  Package vs Library
       
       - 本質上並無區別
       - Package 含有 `__init__.py` 的命名空間（資料夾）
@@ -370,11 +370,11 @@ title: 程式編寫與執行基本概念
   </section>
   <section data-background-transition="zoom" data-background="#0abab5" data-markdown>
     <textarea data-template>
-      ### Module vs Library vs Framework
+      ### Module vs Package vs Framework
       以身體器官作為譬喻
 
       - Module: <i class="fas fa-hand-point-up"></i> 手指
-      - Library: <i class="fas fa-hand-paper"></i> 手掌
+      - Package: <i class="fas fa-hand-paper"></i> 手掌
       - Framework: <i class="fas fa-male"></i> 身體
     </textarea>
   </section>
