--- a/slides/week_3.html
+++ b/slides/week_3.html
@@ -158,12 +158,34 @@ title: 程式編寫與執行基本概念
   </section>
   <section data-markdown>
     <textarea data-template>
+      ### 命令行 (Command-line)
+
+      在終端機中，直接執行 Python 腳本
+
+      ```bash
+      $ python hello.py 
+      ```
+    </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
       ### 互動式視窗 (REPL)
       REPL (互動式視窗) 的全名為 Read-Eval-Print Loop
       
       也就是我們常提到的<span class="fragment highlight-red">python shell</span>
 
       它的目的主要是用來測試而不是用來編寫程式
+    </textarea>
+  </section>
+  <section data-background-transition="zoom" data-background="#0abab5" data-markdown>
+    <textarea data-template>
+      ### 所以那個 Shell 到底是什麼？
+      根據[維基百科](https://zh.wikipedia.org/zh-tw/殼層)
+      > 在電腦科學中，殼層（英語：shell）指「為使用者提供使用者介面」的軟體，通常指的是命令列介面的解析器。一般來說，這個詞是指作業系統中，提供存取核心所提供之服務的程式。 <!-- .element style="font-size: 14px;" -->
+
+      ![](./assets/img/week3/p6-1.png) 
+      <!-- .element style="width:30%;border: 0; background: None; box-shadow: None" -->
+
     </textarea>
   </section>
   <section data-markdown>
@@ -226,6 +248,8 @@ title: 程式編寫與執行基本概念
     </textarea>
   </section>
   <section data-markdown>
+  </section>
+  <section data-markdown>
     <textarea data-template>
       ### Expression (運算式)
 
@@ -233,6 +257,7 @@ title: 程式編寫與執行基本概念
       1 + 1
       range(100)
       'this is a string'
+      str(5487)
       [i for i in 'abcde']
       ```
     </textarea>
