--- a/slides/week_4.html
+++ b/slides/week_4.html
@@ -504,6 +504,27 @@ profile = {
       
     </textarea>
   </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea data-template>
+      #### 參考解答
+      ```python
+      youtubers = {
+          ('孫生', '瑋哥', '酷炫'): '反骨男孩',
+          ('Andy', '家寧'): '眾量級',
+          ('阿滴', '滴妹'): '阿滴英文',
+      }
+      ```
+      取出 __阿滴 滴妹__ 這組網紅的團體名稱：
+
+      ```python
+      >>> key = ('阿滴', '滴妹')
+      >>> youtubers[key]
+
+      # 或不指定變數
+      >>> youtubers[('阿滴', '滴妹')]
+      ```
+    </textarea>
+  </section>
 </section>
 
 <section>
