--- a/slides/week_6.html
+++ b/slides/week_6.html
@@ -57,7 +57,8 @@ title: 資料型態應用與流程控制
   <section data-background-transition="zoom" data-background="#b5533c" data-markdown>
     <textarea data-template>
       ### <i class="fas fa-exclamation-circle"></i> 請務必閱讀 
-      [Built-in Types](https://docs.python.org/3/library/stdtypes.html)
+      + [Built-in Types](https://docs.python.org/3/library/stdtypes.html)
+      + [Data Structures](https://docs.python.org/3/tutorial/datastructures.html)
     </textarea>
   </section>
   <section data-markdown>
@@ -85,95 +86,242 @@ title: 資料型態應用與流程控制
   <section data-background="#2C3539" data-markdown>
     <textarea data-template>
       ### Strings
+
+      情境 1 
       ```python
-      # 範例1: 
-      sent = '   紅鯉魚家有頭小綠驢叫李屢屢，綠鯉魚家有頭小紅驢叫呂里里，紅鯉魚說他家的李屢屢要比綠鯉魚家的呂里里綠，綠鯉魚說他家的呂里里要比紅鯉魚家的李屢屢紅，不只是紅鯉魚比綠鯉魚的驢綠，還是綠鯉魚比紅鯉魚的驢紅    '
-      ```
-      0. 去除字首字尾多餘空白 
-      ```python
+      sent = '   紅鯉魚家有頭小綠驢叫李屢屢，綠鯉魚家有頭小紅驢叫呂里里，紅鯉\
+魚說他家的李屢屢要比綠鯉魚家的呂里里綠，綠鯉魚說他家的呂里里要比紅鯉魚家的\
+李屢屢紅，不只是紅鯉魚比綠鯉魚的驢綠，還是綠鯉魚比紅鯉魚的驢紅    '
+
+      # 1.去除字首字尾多餘空白 
       sent = sent.strip()
-      ```
-      0. 計算句子長度
-      ```python
+
+      # 2.計算句子長度
+
       len(sent)
-      ```
-      0. `藍鯉魚` 是否有出現在句子內？ 
-      ```python
+
+      # 3."藍鯉魚"是否有出現在句子內？ 
+
       '藍鯉魚' in sent
-      ```
-      0. 將 句子以 `，` 分隔成一個 `list`  
-      ```python
+
+      # 4.將句子以"，"分隔成一個 `list`  
+
       sent = sent.split('，')
       ```
     </textarea>
   </section>
   <section data-background="#2C3539" data-markdown>
     <textarea data-template>
+      情境 2 
+
       ```python
-      # 範例2: 
       sent = '我好開心R'
-      ```
-      0. 把 `開心` 取代為 `咖勳`
-      ```python
-      sent = sent.replace('開心, '咖勳')
-      ```
-      0. 把字尾重複 30 次
-      ```python
+
+      # 1. 把"開心"取代為"咖勳" 
+      sent = sent.replace('開心', '咖勳')
+
+      # 2. 把字尾重複 30 次
       sent = sent[:-1] + sent[-1] * 30 
-      ```
-      0. 把英文字母轉成小寫
-      ```python
+
+      # 3. 把英文字母轉成小寫
       sent = sent.lower()
-      ```
-      0. 計算出現幾個 `r`
-      ```python
+
+      # 4. 計算出現幾個"r" 
       sent.count('r')
       ```
     </textarea>
   </section>
   <section data-background="#2C3539" data-markdown>
     <textarea data-template>
-      ```python
-      # 範例3:
-      sents = ['graduate institute of linguistics', 'national taiwan university'] 
-      ```
-      0. 用 ` at ` 將 `sents` 合併為字串 
-      ```python
-      sent = ' at '.join(sents)
-      ```
-      0. 將第一個字轉成大寫
-      ```python
-      sent = sent.capitalize()
-      ```
-      0. 將每一個字的首字轉為大寫 
-      ```python
-      sent = sent.title()
-      ```
-      0. 檢查字串是否為 `ty` 結尾 
-      ```python
-      sent.endswith('ty')
-      ```
+      情境 3
 
+```python
+sents = [
+    'graduate institute of linguistics',
+    'national taiwan university'
+] 
+
+# 1. 用"at"將 sents 合併為字串 
+
+sent = ' at '.join(sents)
+
+# 2. 將第一個字轉成大寫
+
+sent = sent.capitalize()
+
+# 3. 將每一個字的首字轉為大寫 
+
+sent = sent.title()
+
+# 4. 檢查字串是否為"ty"結尾 
+
+sent.endswith('ty')
+```
     </textarea>
   </section>
   <section data-markdown>
     <textarea data-template>
       ### Lists 
+      ```python
+      original_people = ['Sean', 'Joy']
+
+      # 1. 複製 original_people
+      people = original.copy()
+
+      # 2. 把 "Aji" 加入 people
+      people.append('Aji')
+      
+      # 把 "Richard" 和 "Chihyao" 也加入
+      people.extend(['Richard', 'Chihyao'])
+
+      # 3. 把 "Shukai" 加到 people 的第 1 位
+      people.insert(0, 'Shukai')
+
+      # 4. 計算有多少人
+      len(people)
+
+      # 5. 按照字母排序
+      people.sort()
+      
+      # 6. 反轉 people
+      people.reverse()
+
+      # 7. 把 "Aji" 刪除
+      people.remove('Aji')
+
+      # 8. 刪除最後一位
+      people.pop()
+
+      # 9. 找出 "Sean" 在第幾的位置
+      people.index('Sean')
+
+      # 10. 計算 "Joy" 出現幾次
+      people.count('Joy')
+
+      # 11. 清空 people
+      people.clear()
+      ```
     </textarea>
   </section>
   <section data-markdown>
     <textarea data-template>
       ### Tuples
+
+```python
+cands = (
+    '小智', '阿哲', '中ㄟ', '阿哲', '中ㄟ', '阿哲', 
+    '阿哲', '小智', '阿哲', '阿哲', '小智', '中ㄟ', '阿哲',
+)
+
+# 計算"阿哲"出現的次數
+cands.count('阿哲')
+
+# 找出第一次出現"中ㄟ"的位置
+cands.index('中ㄟ')
+
+# 找出最後第一次出現"中ㄟ"的位置
+cands.index('中ㄟ', -1)
+
+```
     </textarea>
   </section>
   <section data-markdown>
     <textarea data-template>
-      ### Dictionaries 
+### Dictionaries 
+
+```python
+gba = {
+    '節目類': {
+        '戲劇節目獎': {
+            '入圍者': ['《城市情歌》', '客家劇場－《台北歌手》', '《麻醉風暴2》', '植劇場－《花甲男孩轉大人》', '《翻牆的記憶》'],
+            '得獎者': '植劇場－《花甲男孩轉大人》',
+        },
+        '迷你劇集獎': {
+            '入圍者': ['HIStory2－《越界》', '《他們在畢業的前一天爆炸2》', '外鄉女－《愛人的選擇》', '《恐怖高校劇場之直播中二間》'],
+            '得獎者': None,
+        },
+    },
+    '個人類': {
+        '戲劇節目男主角獎': {
+            '入圍者': ['李國毅', '張軒睿', '莫子儀', '黃健瑋', '盧廣仲'],
+            '得獎者': '盧廣仲',
+
+        },
+        '戲劇節目女主角獎': {
+            '入圍者': ['孟耿如', '孫可芳', '黃姵嘉', '嚴正嵐', '嚴藝文'],
+        },
+    },
+}
+
+
+# 1. 找出 gba 中共有幾個幾 類 
+len(gba)
+
+# 2. 找出 節目獎-戲劇節目獎 的 得獎者
+gba['節目類']['戲劇節目獎']['得獎者']
+
+# 3. 檢查"戲劇節目女主角獎"是否有在 個人類 裡面 
+'戲劇節目女主角獎' in gba['個人類']
+
+# 4. 把 節目獎-迷你劇集獎 的 得獎者 補上 (《他們在畢業的前一天爆炸2》)
+gba['節目類']['迷你劇集獎']['得獎者'] = '《他們在畢業的前一天爆炸2》' 
+# or
+gba['節目類']['迷你劇集獎']['得獎者'] =  gba['節目類']['迷你劇集獎']['入圍者'][1]
+
+# 5. 把 個人類-戲劇節目女主角獎 增加 得獎者 (黃姵嘉)
+gba['個人類']['戲劇節目女主角'] = '黃姵嘉'
+
+# 6. 把 個人類-戲劇節目男主角獎 的 得獎者 改為"劉阿吉"
+gba['個人類']['戲劇節目男主角獎'] = '劉阿吉'
+
+# 7. 找出 節目類 中的所有獎項
+gba['節目類'].keys()
+
+# 8. 找出所有 類 的獎項
+gba.values()
+
+# 9. 刪除 節目類
+del gba['節目類']
+# or 
+gba.pop('節目類')
+```
     </textarea>
   </section>
   <section data-markdown>
     <textarea data-template>
       ### Sets
+
+      ```python
+      大安區 = ['向尾喵', '向尾喵', '壺壺', '凱西', '蚊香蝌蚪', '盔甲鳥', '盔甲鳥', '壺壺', '蜻蜻蜓', '跳跳豬', '獨角蟲', '獨角蟲', '獨角蟲', '獨角蟲', '勾魂眼', '觸手百合', '跳跳豬', '盔甲鳥', '蜻蜻蜓', '觸手百合', '向尾喵', '凱西', '獨角蟲', '壺壺', '向尾喵', '勾魂眼', '獨角蟲', '凱西', '跳跳豬', '壺壺', '蜻蜻蜓', '獨角蟲', '跳跳豬', '盔甲鳥', '盔甲鳥', '跳跳豬', '壺壺', '觸手百合', '蜻蜻蜓', '蜻蜻蜓', '蜻蜻蜓', '蜻蜻蜓', '觸手百合', '觸手百合']
+      中山區 = ['小小象', '可達鴨', '跳跳豬', '向尾喵', '菊石獸', '可達鴨', '勾魂眼', '凱西', '向尾喵', '向尾喵', '壺壺', '小小象', '凱西', '壺壺', '菊石獸', '可達鴨', '壺壺', '皮卡丘', '壺壺', '利牙魚', '小小象', '菊石獸', '可達鴨', '勾魂眼', '可達鴨', '皮卡丘', '利牙魚', '壺壺', '菊石獸', '壺壺', '小小象', '壺壺', '皮卡丘', '可達鴨', '凱西']
+
+      # 1. 找出 大安區 中，不重複的寶可夢
+      pokemon_daan = set(大安區)
+
+      # 2. 找出 中山區 中，不重複的寶可夢
+      pokemon_zhongshan = set(中山區)
+
+      # 3. 計算 大安區 中，總共有多少不重複的寶可夢 
+      len(pokemon_daan)
+
+      # 4. 檢查"可達鴨"是否有在 大安區 裡面 
+      '可達鴨' in pokemon_daan 
+
+      # 5. 找出 大安區 有但是 中山區 沒有的寶可夢 
+      pokemon_daan - pokemon_zhongshan
+
+      # 6. 找出 大安區 有且 中山區 也有的寶可夢
+      pokemon_daan & pokemon_zhongshan
+
+      # 7. 找出所有在 大安區 與 中山區 出現的寶可夢
+      pokemon_daan | pokemon_daan
+
+      # 8. 找出 大安區 與 中山區 的所有寶可夢，但排除共有的寶可夢
+      pokemon_daan ^ pokemon_zhongshan
+
+      # 9. 刪除 pokemon_zhongshan 集合中的"皮卡丘"
+      pokemon_zhongshan.remmove('皮卡丘')
+      ```
     </textarea>
   </section>
   <section data-markdown>
@@ -193,6 +341,72 @@ title: 資料型態應用與流程控制
     <textarea data-template>
       ## 流程控制 
     </textarea>
+  </section>
+  <section data-background-transition="zoom" data-background="#b5533c" data-markdown>
+    <textarea data-template>
+      ### <i class="fas fa-exclamation-circle"></i> 請務必閱讀 
+      [More Control Flow Tools](https://docs.python.org/3.7/tutorial/controlflow.html)
+    </textarea>
+  </section>
+  <section data-markdown>
+    <textarea data-template>
+### IF ... ELIF ... ELSE
+
+```python
+if male == '帥哥':
+    print('陽光')
+elif male == '醜男':
+    print('猥褻')
+elif male == '宅男':
+    print('宅')
+``` 
+    </textarea>
+  </section>
+  <section>
+    <h3>IF vs. ELIF</h3>
+    <p>發票對獎</p>
+    <div style="display:flex">
+      <div style="flex:1">
+        <pre>
+          <code class="lang-python hljs">
+num = '12345678'
+money = 0
+if num.endswith('12345678'):
+    money += 200000
+elif num.endswith('2345678'):
+    money += 40000
+elif num.endswith('345678'):
+    money += 10000
+elif num.endswith('45678'):
+    money += 4000
+elif num.endswith('5678'):
+    money += 1000 
+elif num.endswith('678'):
+    money += 200
+          </code>
+        </pre>
+      </div>
+      <div style="flex:1">
+        <pre>
+          <code class="lang-python hljs">
+num = '12345678'
+money = 0
+if num.endswith('12345678'):
+    money += 200000
+if num.endswith('2345678'):
+    money += 40000
+if num.endswith('345678'):
+    money += 10000
+if num.endswith('45678'):
+    money += 4000
+if num.endswith('5678'):
+    money += 1000 
+if num.endswith('678'):
+    money += 200
+         </code>
+        </pre>
+      </div>
+    </div>
   </section>
 </section>
 
