--- a/slides/week_6.html
+++ b/slides/week_6.html
@@ -15,7 +15,7 @@ title: 資料型態應用
     <textarea data-template>
       ### [ji.py][ji.py-link]
       [吉.py][ji.py-link] 是一個幫助學習Python的小工具
-      [ji.py-link]: https://github.com/amigamel/ji.py
+      [ji.py-link]: https://github.com/amigcamel/ji.py
     </textarea>
   </section>
   <section id="mac-tweak" data-background-transition="zoom" data-background="#0abab5" data-markdown>
