fix background color

--- a/slides/week_6.html
+++ b/slides/week_6.html
@@ -111,7 +111,7 @@ title: 資料型態應用
       ```
     </textarea>
   </section>
-  <section data-background="#2C3539" data-markdown>
+  <section data-markdown>
     <textarea data-template>
       情境 2 
 
@@ -132,7 +132,7 @@ title: 資料型態應用
       ```
     </textarea>
   </section>
-  <section data-background="#2C3539" data-markdown>
+  <section data-markdown>
     <textarea data-template>
       情境 3
 
