add some exercises

--- a/slides/week_6.html
+++ b/slides/week_6.html
@@ -81,6 +81,13 @@ title: 資料型態應用
           ```
     </textarea>
   </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea data-template>
+### 練習
+
+6÷2(1+2)=?
+    </textarea>
+  </section>
 </section>
 
 <section>
@@ -160,6 +167,21 @@ sent.endswith('ty')
 ```
     </textarea>
   </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea date-template>
+### 練習
+
+```python
+sent = '紅鯉魚家有頭小綠驢叫李屢屢，綠鯉魚家有頭小紅驢叫呂里里，紅鯉\
+魚說他家的李屢屢要比綠鯉魚家的呂里里綠，綠鯉魚說他家的呂里里要比紅鯉魚家的\
+李屢屢紅，不只是紅鯉魚比綠鯉魚的驢綠，還是綠鯉魚比紅鯉魚的驢紅'
+```
+
+1. 把 _鯉魚_ 換成 _鮭魚_
+2. 請問 _紅鮭魚_ 和 _綠鮭魚_ 誰比較多？
+3. 把逗點改成換行 
+    </textarea>
+  </section>
 </section>
 
 <section>
@@ -207,6 +229,12 @@ sent.endswith('ty')
       ```
     </textarea>
   </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea date-template>
+### 練習
+
+    </textarea>
+  </section>
 </section>
 
 <section>
@@ -227,6 +255,16 @@ cands.count('阿哲')
 cands.index('中ㄟ')
 
 ```
+    </textarea>
+  </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea date-template>
+### 練習
+    </textarea>
+  </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea date-template>
+### 練習
     </textarea>
   </section>
 </section>
@@ -292,6 +330,11 @@ del gba['節目類']
 # or 
 gba.pop('節目類')
 ```
+    </textarea>
+  </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea date-template>
+### 練習
     </textarea>
   </section>
 </section>
