finish adding all exercises

--- a/slides/week_6.html
+++ b/slides/week_6.html
@@ -233,6 +233,16 @@ sent = '紅鯉魚家有頭小綠驢叫李屢屢，綠鯉魚家有頭小紅驢叫
     <textarea date-template>
 ### 練習
 
+2018 FHM 臺灣前十大美女
+
+```python
+stars = ['周子瑜', '許瑋甯', '張鈞甯', '蔡依林', '郭雪芙', '林明禎', '張景嵐', '周曉涵', '陳庭妮', '林志玲']
+```
+
+1. 移除 _林志玲_
+2. 把 _邵雨薇_ 加到第一名
+3. 找出 _張景嵐_ 排名第幾
+4. 把名單由由最後一名開始排
     </textarea>
   </section>
 </section>
@@ -255,16 +265,6 @@ cands.count('阿哲')
 cands.index('中ㄟ')
 
 ```
-    </textarea>
-  </section>
-  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
-    <textarea date-template>
-### 練習
-    </textarea>
-  </section>
-  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
-    <textarea date-template>
-### 練習
     </textarea>
   </section>
 </section>
@@ -335,6 +335,23 @@ gba.pop('節目類')
   <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
     <textarea date-template>
 ### 練習
+
+饒舌歌單
+
+```python
+rap_songs = {
+	'熊仔': '凶宅',
+	'MJ116': '幹大事',
+	'沈玉琳': '人狗情未了',
+	'周躺好': '你是我的菜',
+	'Leo王': '陪你過假日',
+}
+```
+
+1. 列出所有饒舌歌手
+1. 移除假饒舌的那位
+1. 把錯誤歌手名稱改正
+1. 計算總共有幾首歌
     </textarea>
   </section>
 </section>
@@ -377,6 +394,23 @@ gba.pop('節目類')
       ```
     </textarea>
   </section>
+  <section data-background-transition="zoom" data-background="#2C3539" data-markdown>
+    <textarea date-template>
+### 練習
+
+世界百大DJ
+
+```python
+top10_2017 = ['Martin Garrix', 'Dimitri Vegas & Like Mike', 'Armin Van Buuren', 'Hardwell', 'Tiesto', 'The Chainsmokers', 'David Guetta', 'Afrojack', 'Steve Aoki', 'Marshmello', 'Don Diablo']
+top10_2016 = ['Afrojack', 'Armin Van Buuren', 'David Guetta', 'Dimitri Vegas & Like Mike', 'Hardwell', 'Martin Garrix', 'Oliver Heldens', 'Skrillex', 'Steve Aoki', 'Tiesto']
+```
+
+1. 2017年新進榜的有誰？
+2. 誰在2017未進榜？
+3. 誰連續兩年都進榜？
+    </textarea>
+  </section>
+
 </section>
 
 <section>
